--- a/style.css
+++ b/style.css
@@ -434,10 +434,11 @@ margin-right: 5px; /* Add spacing between the image and text */
 nav .fas{
   display: none;
 }
-@media only screen and (max-width:600px){
+@media only screen and (max-width:768px){
 
   #header{
     background-image: url('images/bgi2.jpg');
+    background-size: cover;
 
   }
 
